--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@ $(document).ready(function () {
 <iframe width="560" height="315" style="margin-right: 20px" align="left" frameborder="0" src="https://www.youtube.com/embed/-26g5lJaFhE">
 </iframe>
 <p>Hi! My name is Yung-Yu.</p>
-<p>I obtained my BA degree in Political Science at <a href="https://www.ntu.edu.tw/english/index.html">National Taiwan University</a> in 2015 and receieved my Master degree in Public Administration at <a href="https://www.nccu.edu.tw/app/home.php">National Chengchi University</a> in 2019.</p>
-<p>I previously worked as a policy analyst in the <a href="https://www.ly.gov.tw/Engpages/index.aspx">Congress of Taiwan</a> from 2016 to 2017. Currently, I work as a research assitant at <a href="http://www.econ.sinica.edu.tw/english">Institute of Economics, Academia Sinica</a>.</p>
-<p>My full CV is available <a href="files/cv_yungyutsai.pdf">here</a>.</p>
+<p>I obtained my BA degree in Political Science at <a href = "https://www.ntu.edu.tw/english/index.html" target="_blank">National Taiwan University</a> in 2015 and receieved my Master degree in Public Administration at <a href = "https://www.nccu.edu.tw/app/home.php" target="_blank">National Chengchi University</a> in 2019.</p>
+<p>I previously worked as a policy analyst in the <a href = "https://www.ly.gov.tw/Engpages/index.aspx" target="_blank">Legislative Yuan (congress of Taiwan)</a> from 2016 to 2017. Currently, I work as a research assitant at <a href = "http://www.econ.sinica.edu.tw/english" target="_blank">Institute of Economics, Academia Sinica</a>.</p>
+<p>My full CV is available <a href = "files/CV_YungYuTsai.pdf" target="_blank">here</a></p>
 
 
 
