--- a/portfolio.html
+++ b/portfolio.html
@@ -339,7 +339,9 @@ $(document).ready(function () {
 </center>
 </div>
 <div class="col-md-4">
-
+<center>
+<a href = "https://yungyutsai.shinyapps.io/COVID-19/" target="_blank"> <img src="images/portfolio/COVID19.jpg" style="width:100%"> </a>
+</center>
 </div>
 <div class="col-md-4">
 
@@ -352,7 +354,9 @@ $(document).ready(function () {
 </center>
 </div>
 <div class="col-md-4">
-
+<center>
+<a href = "https://yungyutsai.shinyapps.io/COVID-19/" target="_blank"> COVID-19 Confirmed / Death Cases Trend </a>
+</center>
 </div>
 <div class="col-md-4">
 
